--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "amazing-events_gamarra",
   "version": "1.0.0",
-  "description": "Frontend => Introduction to JavaScript Development [FE14-TN]",
+  "description": "AMAZING-EVENTS_VUE",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -9,14 +9,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/rickysanta1/AMAZING-EVENTS_GAMARRA.git"
+    "url": "git+https://github.com/rickysanta1/AMAZING-EVENTS_VUE.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/rickysanta1/AMAZING-EVENTS_GAMARRA/issues"
+    "url": "https://github.com/rickysanta1/AMAZING-EVENTS_VUE/issues"
   },
-  "homepage": "https://github.com/rickysanta1/AMAZING-EVENTS_GAMARRA#readme",
+  "homepage": "https://github.com/rickysanta1/AMAZING-EVENTS_VUE#readme",
   "dependencies": {
     "bootstrap": "^5.2.3"
   }
